--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Mayank Attri</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>I'm a 2nd year CSE student at IIIT-Delhi.</p>
 </body>
 </html>
