--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 Apart from English and Hindi, I also speak geek.
             </p>
             <ul class="actions">
-                <li><a href="#" class="button special">CV</a></li>
+                <li><a href="./CV.pdf" class="button special">CV</a></li>
             </ul>
         </section>
         <section id="three">
